--- a/assets/index.css
+++ b/assets/index.css
@@ -11,4 +11,54 @@ body {
   padding: 10px;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
+  padding: 10px;
+}
+
+#kitty-reel {
+  border: 1px solid black;
+  max-height: calc(100vh - 40px);
+  min-height: calc(100vh - 40px);
+  max-width: calc(100vw - 40px);
+  min-width: calc(100vw - 40px);
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+div.litterbox {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+}
+
+img.kitty {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition:
+    top 1s,
+    bottom 1s,
+    left 1s,
+    right 1s;
+  border-radius: 10px;
+  min-height: 200px;
+  max-height: 200px;
+  min-width: 200px;
+  max-width: 200px;
+  object-fit: cover;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
